src/test/deca/context/invalid/objets/05ExtendsNotDefinedClass.deca

class A extends B {
    int x;
}

class B {
    int y;
}